@@ -651,6 +651,10 @@ sky_wobble_help			Sky animation
 infinity_plane_help		Use infinite points (Does not work properly on most Windows systems)
 lag_o_meter_help		Draw Lag-O-Meter in network play
 lag_o_meter_scale_help  Scale of the Lag-O-Meter. 1.0 is the "correct" value, older clients were hardcoded to .5 due to a bug.
+lag_o_meter_threshold_help	The Lag-O-Meter will only be drawn if the product of cycle speed and lag is bigger than this value.
+lag_o_meter_blend_help		Amount the player color should be blended with white to get the color of the Lag-O-Meter. 1 means white, 0 means the color of the player.
+lag_o_meter_use_old_help	Should we use the old buggy Lag-O-Meter? This functionality will go away soon.
+axes_indicator_help		Should the Axis Indicator be rendered?
 predict_objects_help    Predict cycle movement in network play
 textures_hi_help		Use high colour textures
 sparks_help			    Draw sparks when going too close to a wall
@@ -1214,6 +1218,8 @@ network_opts_pingchar_help	The maximum ping (in ms) you are willing to take over
 
 network_opts_lagometer_text	Lag-O-Meter:
 network_opts_lagometer_help	In a network game, the place where the other players may already be now (but you have not yet noticed because of the network delay) is indicated as a geometrical shape. Useful for internet play.
+network_opts_axesindicator_text	Axes Indicator:
+network_opts_axesindicator_help	The axes indicator is meant to show the directions the cycle can turn to as lines going out from the cycle. Good on servers with changing configs so you know what to expect before you turn.
 
 network_opts_predict_text	Prediction:
 network_opts_predict_help	In a network game, this extrapolates the cycles' movement. Leaving it disabled makes the graphics smoother, enabling it gives yo a better image of the actual situation. I leave it disabled; the Lag-O-Meter is a good substitute for prediction. This is always disabled in server mode.
